--- a/index.html
+++ b/index.html
@@ -8,5 +8,12 @@
 </head>
 <body>
     <h1>Salam Dunya</h1>
+    <div class="container">
+        <div class="row">
+            <div class="col-lg-5"></div>
+            <div class="col-lg-7"></div>
+        </div>
+    </div>
+    <h2>Salam Dunya</h2>
 </body>
 </html>
